# wumpus-ai

./: .gitignore  consts.py  main.py  player.py  pyproject.toml  test_draft.py  utils.py  wumpus.py
inference/: bayesian.py  probability.py
